@@ -1,3 +1,7 @@
+2000-07-07  Kazu Hirata <kazu@hxi.com>
+
+	* config/tc-sh.c: Fix formatting.
+
 2000-07-06  Mark Elbrecht  <snowball3@bigfoot.com>
 
 	* config/obj-coff.c (TC_COFF_SECTION_DEFAULT_ATTRIBUTES): New.
